--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
 		</head>
 		<body style="bgcolor:black;">
-            <img src="https://archive.org/download/oliver_twist_librivox/__ia_thumb.jpg">
+            <img src="https://archive.org/download/oliver_twist_librivox/__ia_thumb.jpg"/>
 			<audio id="player" controls>
   				<source src="https://archive.org/download/oliver_twist_librivox/dickens_oliver_twist_01.mp3" type="audio/mp3" />
                 <source src="https://archive.org/download/oliver_twist_librivox/dickens_oliver_twist_01.ogg" type="audio/ogg" />
