--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script src="https://cdn.plyr.io/3.6.2/plyr.js"></script>
 		<link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
 	</head>
-	<body style="bgcolor:black;">
+	<body style="color:black;">
             	<img src="https://archive.org/download/oliver_twist_librivox/__ia_thumb.jpg"/>
 		<audio id="player" controls>
   			<source src="https://archive.org/download/oliver_twist_librivox/dickens_oliver_twist_01.mp3" type="audio/mp3" />
